z-index for search fixed

--- a/src/app/main/header/header.component.scss
+++ b/src/app/main/header/header.component.scss
@@ -57,6 +57,7 @@ header {
     background-color: v.$purple_bg;
     opacity: 0.9;
     width: 500px;
+    z-index: 1000;
     
     .search-result-item {
       @include m.flexBox(row, flex-start, center, 8px);
